# miniCore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  release.yml
cmake/: minicoreConfig.cmake.in
examples/: minimal_pub_sub.c  minimal_rpc.c
include/: epx_config.h  epx_types.h  minicore_version.h
include/core/: epx_broker.h  epx_mempool.h  epx_msg.h  epx_topic.h  epx_topic_tbl_priv.h
include/framework/: epx_rpc.h  epx_topic_names.h
include/minimal/: epx_minimal.h
include/osal/: epx_os_mem.h  epx_os_mutex.h  epx_os_queue.h  epx_os_thread.h  epx_os_type.h
src/core/: epx_broker.c  epx_mempool.c  epx_msg.c  epx_topic.c  epx_topic_tbl.c
src/framework/: epx_rpc.c
src/osal/freertos/: epx_os_mem.c  epx_os_mutex.c  epx_os_queue.c  epx_os_thread.c
src/osal/linux/: epx_os_mem.c  epx_os_mutex.c  epx_os_queue.c  epx_os_thread.c
src/osal/rtthread/: epx_os_mem.c  epx_os_mutex.c  epx_os_queue.c  epx_os_thread.c
tests/: broker_smoke.c  broker_trunc_smoke.c  broker_wildcard_smoke.c
